about_template_added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Some Keywork goes there" />
     <meta name="description" content="some Description goes therer" />
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="images/innova/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="images/absolute/ms-icon-144x144.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Absolute Maid Agency</title>
@@ -28,8 +28,6 @@
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
     <![endif]-->
-
-
 </head>
 
 <body>
@@ -61,10 +59,11 @@
                             </span>
                         </div>
                     </div>
-                    <div class="col-12 col-md-12 menu_wrap_col">
+                    
+                    <div class="col-12 col-md-12 menu_wrap_col d-none d-sm-block">
                         <ul class="row menu_ul">
                             <li class="menu_li">
-                                <a href="home.html" class="main_menu home_menu active_menu"></a>
+                                <a href="index.html" class="main_menu home_menu active_menu"></a>
                             </li>
                             <li class="menu_li">
                                 <a href="aboutus.html" class="main_menu aboutus_menu"></a>
@@ -88,7 +87,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid slider_container_fluid">
+    <div class="container-fluid slider_container_fluid d-none d-sm-block">
         <div class="container slider_container">
             <!-- Start slider -->
             <div id="wowslider-container1">
@@ -255,8 +254,11 @@
         <!-- homecontent_fluid -->
 
     </div><!-- maincontents -->
-    <div class="footer">
-        
+    <div class="footer continer-fluid footer_container_fluid">
+        <div class="container footer_container">
+            <span><a href="">T:6462 01 20 |</a><a href=""> F: 6462 3564 |</a><a href=""> Hspan:92761261</a></span>
+            <span class="float-right"><a href="">Absolute Empployment Services. All Rights Reserved.</a></span>
+        </div>
     </div>
 
 
