--- a/aboutus.html
+++ b/aboutus.html
@@ -91,7 +91,7 @@
        <div class="container nav_title_container">
            <div class="row">
                <div class="col-12 col-md-12">
-                   <p class="site_nav_text"><strong>About Us</strong></p>
+                   <p class="site_nav_text text_blue"><strong>About Us</strong></p>
                </div>
            </div>
        </div>
@@ -102,17 +102,22 @@
                 <div class="row homecontent_row aboutcontent_row">
                     <div class="col-12 col-md-6 maid_bio_col">
                         <div class="row">
-                            <div class="col-12" style="height:400px;background: #333;line-height: 400px;text-align: center;color:#fff;"><p>Image</p></div>
-                            <h2>Your One-Stop Website for Maid's Matter</h2>
+                            <div class="col-12 col-md-12 text-center">
+                                <img src="images/aboutUs_maid_Image.png" alt=""> 
+                                <h3 class="text-centered title_font text_blue"><br>Your One-Stop Website for Maid's Matter<br>         </h3>
+                            </div>
+                            
                         </div>
                     </div>
                     <div class="col-12 col-md-6 maid_bio_col">
                         <div class="row">
-                            <div class="col-12 col-md-12">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad dolorem, accusantium qui! Commodi temporibus, tempora ex quasi, reprehenderit in sequi animi recusandae? Totam quidem maiores vel minima. Laboriosam, provident iusto!</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad dolorem, accusantium qui! Commodi temporibus, tempora ex quasi, reprehenderit in sequi animi recusandae? Totam quidem maiores vel minima. Laboriosam, provident iusto!</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad dolorem, accusantium qui! Commodi temporibus, tempora ex quasi, reprehenderit in sequi animi recusandae? Totam quidem maiores vel minima. Laboriosam, provident iusto!</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad dolorem, accusantium qui! Commodi temporibus, tempora ex quasi, reprehenderit in sequi animi recusandae? Totam quidem maiores vel minima. Laboriosam, provident iusto!</p>
+                            <div class="col-12 col-md-12 text-justify text_font">
+                                <p>
+Absolute Employment Services is committed in connecting people with different culture and help them to settle in our Singapore environment while providing the best helper for your household needs. We are a fully accredited and licensed employment agency in Singapore, established since 2008. Our agency specializes in sourcing for domestic helpers from Myanmar (formerly known as Burma). We are also able to arrange for maids from India, Indonesia and the Philippines.</p>
+                                <p>Due to the hospitable and simple nature of the Burmese people, the demand for Myanmar maids has risen. They are popular for their reputably good working attitudes and simple personalities. Currently, there are more than 25000 hired in Singapore.</p>
+                                <p>A perfect home deserves a dedicated helper. Not only the helpers from our agency are known to be honest and respectable, they are also obedient and hardworking. Each of our candidates undergo a careful and strict screening process by our various recruiters in Myanmar, to ensure the helper we provide you maintains the highest standard of quality. We will carry out a detailed selection process to consider the best match of our candidates’ skills to clients needs.</p>
+                                <p>Our company guarantees a professional and transparent transaction, with no hidden fees. Our agency takes care of all the necessary arrangements on your behalf, and in most cases your chosen worker will arrive within two weeks upon approval from MOM.</p>
+                                <p> Our services are available to you in customised packages. Part of our services list includes Free Replacement, Counselling, Documentation and etc…</p>
                             </div>
                         </div>
                         
@@ -131,9 +136,6 @@
             <span class="float-right"><a href="">Absolute Empployment Services. All Rights Reserved.</a></span>
         </div>
     </div>
-
-
-
 
     <script type="text/javascript" src="engine1/wowslider.js"></script>
     <script type="text/javascript" src="engine1/script.js"></script>
