abt,faq,sers added

--- a/contactus.html
+++ b/contactus.html
@@ -11,7 +11,7 @@
     <meta name="msapplication-TileImage" content="images/absolute/ms-icon-144x144.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>Absolute Ageancy | About Us</title>
+    <title>Absolute Ageancy | Contact Us</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="stylesheets/animate.css">
@@ -42,7 +42,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a class="nav-link" href="aboutus.html">About Us</a>
                     </li>
                     <li class="nav-item">
@@ -54,7 +54,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="faqs.html">FAQS</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="contactus.html">Contact Us</a>
                     </li>
                 </ul>
@@ -93,7 +93,7 @@
                                 <a href="index.html" class="main_menu home_menu"></a>
                             </li>
                             <li class="menu_li">
-                                <a href="aboutus.html" class="main_menu aboutus_menu active_menu"></a>
+                                <a href="aboutus.html" class="main_menu aboutus_menu"></a>
                             </li>
                             <li class="menu_li">
                                 <a href="services.html" class="main_menu services_menu"></a>
@@ -105,64 +105,129 @@
                                 <a href="faqs.html" class="main_menu faqs_menu"></a>
                             </li>
                             <li class="menu_li">
-                                <a href="contactus.html" class="main_menu contactus_menu"></a>
+                                <a href="contactus.html" class="main_menu contactus_menu active_menu"></a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-    </div><!--header_container_fluid-->
-   <div class="site_navi_title container-fluid nav_title_container_fluid">
-       <div class="container nav_title_container">
-           <div class="row">
-               <div class="col-12 col-md-12">
-                   <p class="site_nav_text text_blue"><strong>About Us</strong></p>
-               </div>
-           </div>
-       </div>
-   </div><!-- nav_title_container_fluid -->
+    </div>
+    <!--header_container_fluid-->
+    <div class="site_navi_title container-fluid nav_title_container_fluid">
+        <div class="container nav_title_container">
+            <div class="row">
+                <div class="col-12 col-md-12">
+                    <p class="site_nav_text text_blue"><strong>Contact Us</strong></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- nav_title_container_fluid -->
     <div class="maincontents short_contents">
         <div class="container-fluid homecontent_fluid">
-            <div class="container homecontent_container aboutcontent_container">
+            <div class="container homecontent_container ">
                 <div class="row homecontent_row aboutcontent_row">
                     <div class="col-12 col-md-6 maid_bio_col">
                         <div class="row">
                             <div class="col-12 col-md-12 text-center">
-                                <img src="images/aboutUs_maid_Image.png" alt=""> 
-                                <h3 class="text-centered title_font text_blue"><br>Your One-Stop Website for Maid's Matter<br>         </h3>
+                                <img src="images/contact_maid.png" class="img-fluid" alt="">
                             </div>
-                            
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 maid_bio_col">
+                    <div class="col-12 col-md-6 contact_info_row">
                         <div class="row">
-                            <div class="col-12 col-md-12 text-justify text_font">
-                                <p>
-Absolute Employment Services is committed in connecting people with different culture and help them to settle in our Singapore environment while providing the best helper for your household needs. We are a fully accredited and licensed employment agency in Singapore, established since 2008. Our agency specializes in sourcing for domestic helpers from Myanmar (formerly known as Burma). We are also able to arrange for maids from India, Indonesia and the Philippines.</p>
-                                <p>Due to the hospitable and simple nature of the Burmese people, the demand for Myanmar maids has risen. They are popular for their reputably good working attitudes and simple personalities. Currently, there are more than 25000 hired in Singapore.</p>
-                                <p>A perfect home deserves a dedicated helper. Not only the helpers from our agency are known to be honest and respectable, they are also obedient and hardworking. Each of our candidates undergo a careful and strict screening process by our various recruiters in Myanmar, to ensure the helper we provide you maintains the highest standard of quality. We will carry out a detailed selection process to consider the best match of our candidates’ skills to clients needs.</p>
-                                <p>Our company guarantees a professional and transparent transaction, with no hidden fees. Our agency takes care of all the necessary arrangements on your behalf, and in most cases your chosen worker will arrive within two weeks upon approval from MOM.</p>
-                                <p> Our services are available to you in customised packages. Part of our services list includes Free Replacement, Counselling, Documentation and etc…</p>
+                            <div class="col-1 col-md-1 text-justify text_font text-center">
+                                <img src="images/location_ico.png" alt="Absolute Location Icon">
+                            </div>
+                            <div class="col-11 col-md-11 p-0">
+                                <p class="text-font"><strong>144 Upper Bukit Timah Road
+#03-K18/19, Beauty World Centre, Singapore 588177</strong></p>
                             </div>
                         </div>
-                        
+                        <div class="row">
+                            <div class="col-1 col-md-1 text-justify text_font text-center">
+                                <img src="images/mobile_ico.png" alt="Absolute Mobile Icon">
+                            </div>
+                            <div class="col-11 col-md-11 p-0">
+                                <p class="text-font"><strong>+65 6462 0120 / +65 6462 3564</strong></p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-1 col-md-1 text-justify text_font text-center">
+                                <img src="images/Email_ico.png" alt="Absolute Email Icon">
+                            </div>
+                            <div class="col-11 col-md-11 p-0">
+                                <p class="text-font"><strong>aesmaids@yahoo.com.sg</strong></p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-1 col-md-1 text-justify text_font text-center">
+                                <img src="images/clock_ico.png" alt="Absolute Clock Icon">
+                            </div>
+                            <div class="col-11 col-md-11 p-0">
+                                <h5 class="text-font">
+                                    <strong>Monday - Friday</strong>
+                                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp:&nbsp&nbsp10:30am to 7:00pm<br>   
+                                    <strong>Saturday</strong>
+                                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp:&nbsp&nbsp9:30am to 6:00pm <br>
+                                    <strong>Sunday & Public Holiday</strong>
+                                    &nbsp&nbsp:&nbsp&nbspClosed
+                                </h5>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row contactform_row">
+                            <div class="col-12 col-md-12">
+                                <div class="row aboutus_text">
+                                    <div class="col-md-12">
+                                        <form action="">
+                                            <div class="form-group">
+                                                <label for="" class="text_font"><strong>Name</strong></label>
+                                                <input type="text" class="form-control contact_name" name="name" id="contact_name" aria-describedby="helpId" placeholder="" required>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="" class="text_font"><strong>Email</strong></label>
+                                                <input type="email" class="form-control contact_email" name="email" id="contact_email" aria-describedby="helpId" placeholder="" required>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="" class="text_font"><strong>Tel</strong></label>
+                                                <input type="email" class="form-control contact_email" name="email" id="contact_email" aria-describedby="helpId" placeholder="" required>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="" class="text_font"><strong>Message</strong></label>
+                                                <textarea class="form-control" name="" id="" rows="7" placeholder=""></textarea>
+                                            </div>
+                                            <div class="text-right">
+                                                <button type="submit" class="btn btn-block btn-secondary title_font send_btn" style="font-size:25px;height: 64px;"><strong>Send</strong></button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div><!-- contactform-row -->
                     </div>
+                    <!--contact_info_row -->
                 </div>
-                <!-- homecontent_row -->
+                <!-- aboutcontent_row -->
             </div>
-            <!-- homecontent_container -->
+            <br><br>
+             <div class="container address_container">
+                    <div class="embed-responsive embed-responsive-21by9">
+                            <!-- <iframe width="100%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=103.7742269039154%2C1.3412797086787893%2C103.77776741981508%2C1.3437493450791862&amp;layer=mapnik"></iframe> -->
+                            <iframe width="100%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=103.77457022666931%2C1.3412126718253357%2C103.77811074256898%2C1.3436823082934526&amp;layer=mapnik&amp;marker=1.342446149634801%2C103.77634048461914" ></iframe>
+                    </div>
+                </div><!-- address_container -->
         </div>
-        <!-- homecontent_fluid -->
-
-    </div><!-- maincontents -->
+        <!-- aboutcontent_fluid -->
+    </div>
+    <!-- maincontents -->
     <div class="footer continer-fluid footer_container_fluid">
         <div class="container footer_container">
             <span><a href="">T:6462 01 20 |</a><a href=""> F: 6462 3564 |</a><a href=""> Hspan:92761261</a></span>
             <span class="float-right"><a href="">Absolute Empployment Services. All Rights Reserved.</a></span>
         </div>
     </div>
-
     <script type="text/javascript" src="engine1/wowslider.js"></script>
     <script type="text/javascript" src="engine1/script.js"></script>
     <!-- End WOWSlider.com BODY section -->
@@ -170,15 +235,15 @@ Absolute Employment Services is committed in connecting people with different cu
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.js"></script>
     <script>
-      $(window).scroll(function() {    
-    var scroll = $(window).scrollTop();
+    $(window).scroll(function() {
+        var scroll = $(window).scrollTop();
         if (scroll >= 500) {
             //clearHeader, not clearheader - caps H
             $(".maid_bio_card").addClass("zoomIn");
-        }else{
+        } else {
             $(".maid_bio_card").removeClass("zoomIn");
         }
-    });     
+    });
     </script>
 </body>
 
