--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
     <meta name="msapplication-TileImage" content="images/absolute/ms-icon-144x144.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>Absolute Ageancy | About Us</title>
+    <title>Absolute Ageancy | Services</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="stylesheets/animate.css">
@@ -42,10 +42,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a class="nav-link" href="aboutus.html">About Us</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="services.html">Services</a>
                     </li>
                     <li class="nav-item">
@@ -93,10 +93,10 @@
                                 <a href="index.html" class="main_menu home_menu"></a>
                             </li>
                             <li class="menu_li">
-                                <a href="aboutus.html" class="main_menu aboutus_menu active_menu"></a>
+                                <a href="aboutus.html" class="main_menu aboutus_menu"></a>
                             </li>
                             <li class="menu_li">
-                                <a href="services.html" class="main_menu services_menu"></a>
+                                <a href="services.html" class="main_menu services_menu active_menu"></a>
                             </li>
                             <li class="menu_li">
                                 <a href="searchmaid.html" class="main_menu searchmaid_menu"></a>
@@ -117,43 +117,88 @@
        <div class="container nav_title_container">
            <div class="row">
                <div class="col-12 col-md-12">
-                   <p class="site_nav_text text_blue"><strong>About Us</strong></p>
+                   <p class="site_nav_text text_blue"><strong>Services</strong></p>
                </div>
            </div>
        </div>
    </div><!-- nav_title_container_fluid -->
-    <div class="maincontents short_contents">
-        <div class="container-fluid homecontent_fluid">
-            <div class="container homecontent_container aboutcontent_container">
-                <div class="row homecontent_row aboutcontent_row">
-                    <div class="col-12 col-md-6 maid_bio_col">
-                        <div class="row">
-                            <div class="col-12 col-md-12 text-center">
-                                <img src="images/aboutUs_maid_Image.png" alt=""> 
-                                <h3 class="text-centered title_font text_blue"><br>Your One-Stop Website for Maid's Matter<br>         </h3>
-                            </div>
-                            
-                        </div>
+    <div class="maincontents ">
+        <div class="container-fluid  services_fluid">
+            <div class="container services_container">
+                <div class="row services_row">
+                    <div class="col-12 col-sm-6 col-md-4 services_col">
+                        <h4 class="title_font">Work Permit Application For</h4>
+                        <ul class="services_type text_font">
+                            <li>Joint Income Scheme</li>
+                            <li>Sponsorship Scheme</li>
+                            <li>No Income/Retiree Scheme</li>
+                            <li>Direct Hire Scheme</li>
+                        </ul>
                     </div>
-                    <div class="col-12 col-md-6 maid_bio_col">
-                        <div class="row">
-                            <div class="col-12 col-md-12 text-justify text_font">
-                                <p>
-Absolute Employment Services is committed in connecting people with different culture and help them to settle in our Singapore environment while providing the best helper for your household needs. We are a fully accredited and licensed employment agency in Singapore, established since 2008. Our agency specializes in sourcing for domestic helpers from Myanmar (formerly known as Burma). We are also able to arrange for maids from India, Indonesia and the Philippines.</p>
-                                <p>Due to the hospitable and simple nature of the Burmese people, the demand for Myanmar maids has risen. They are popular for their reputably good working attitudes and simple personalities. Currently, there are more than 25000 hired in Singapore.</p>
-                                <p>A perfect home deserves a dedicated helper. Not only the helpers from our agency are known to be honest and respectable, they are also obedient and hardworking. Each of our candidates undergo a careful and strict screening process by our various recruiters in Myanmar, to ensure the helper we provide you maintains the highest standard of quality. We will carry out a detailed selection process to consider the best match of our candidates’ skills to clients needs.</p>
-                                <p>Our company guarantees a professional and transparent transaction, with no hidden fees. Our agency takes care of all the necessary arrangements on your behalf, and in most cases your chosen worker will arrive within two weeks upon approval from MOM.</p>
-                                <p> Our services are available to you in customised packages. Part of our services list includes Free Replacement, Counselling, Documentation and etc…</p>
-                            </div>
-                        </div>
-                        
+                    <div class="col-12 col-sm-6 col-md-4 services_col">
+                        <h4 class="title_font">Renewal Work Permit</h4>
+                        <ul class="services_type text_font">
+                            <li>Purchase Insurance/Security Bond</li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4 services_col">
+                        <h4 class="title_font">Renewal of FDW's Passport</h4>
+                        <ul class="services_type text_font">
+                            <li>Visit to respective Embassy</li>
+                            <li>Collection of Passport</li>
+                            <li>Transportation between house and Embassy</li>
+                        </ul>
+                    </div>
+                     <div class="col-12 col-sm-6 col-md-4 services_col">
+                        <h4 class="title_font">Cancellation Of Work Permit</h4>
+                        <ul class="services_type text_font">
+                            <li>Assist to purchase comprehensive air ticket</li>
+                            <li>Escorts maid to Airport/Harbour till </li>
+                            <li>Immigration clearance</li>
+                            <li>Obtain/Extend maid’s Special Pass</li>
+                        </ul>
+                    </div>
+                     <div class="col-12 col-sm-6 col-md-4 services_col">
+                        <h4 class="title_font">Transfering Current FDW</h4>
+                        <ul class="services_type text_font">
+                            <li> Lodging + Accommodation</li>
+                            <li>Swift Transaction </li>
+                            <li>Fast Transfering Rate</li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4 services_col">
+                        <h4 class="title_font">Contract</h4>
+                        <ul class="services_type text_font">
+                            <li> Employment contract</li>
+                            <li>Service Agreement</li>
+                            <li>Off days contract</li>
+                            <li>High Rise windows cleaning agree</li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4 services_col">
+                        <h4 class="title_font">Other Services</h4>
+                        <ul class="services_type text_font">
+                            <li>Home Leave processing</li>
+                            <li>Airline Ticketing</li>
+                            <li>6th monthly medical check up/li>
+                            <li>Lodgging service while employer go oversea</li>
+                            <li>VISA application(Multiple entry) Malaysia,Thailand and more… </li>
+                        </ul>
                     </div>
                 </div>
-                <!-- homecontent_row -->
+                <div class="row services_row">
+                    <div class="col-12 col-md-6 services_col">
+                       <img src="images/services_maids_03.png" class="services_maid_pic img-fluid" alt="">
+                    </div>
+                    <div class="col-12 col-md-6 services_col">
+                        <img src="images/services_maids_05.png" class="services_maid_pic img-fluid" alt="">
+                    </div>
+                </div>
+                <!-- services_row -->
             </div>
-            <!-- homecontent_container -->
+            <!-- services_container -->
         </div>
-        <!-- homecontent_fluid -->
+        <!-- services_fluid -->
 
     </div><!-- maincontents -->
     <div class="footer continer-fluid footer_container_fluid">
