search page added

--- a/faqs.html
+++ b/faqs.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="searchmaid.html">Search Maid</a>
+                        <a class="nav-link" href="search.html">Search Maid</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="faqs.html">FAQS</a>
@@ -99,7 +99,7 @@
                                 <a href="services.html" class="main_menu services_menu"></a>
                             </li>
                             <li class="menu_li">
-                                <a href="searchmaid.html" class="main_menu searchmaid_menu"></a>
+                                <a href="search.html" class="main_menu searchmaid_menu"></a>
                             </li>
                             <li class="menu_li">
                                 <a href="faqs.html" class="main_menu faqs_menu active_menu"></a>
