maid detail update

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                     <div class="row">
                                         <div class="card col-5 col-md-5 maid_bio_card animated">
                                             <img class="card-img-top rounded img-fluid" src="images/sample_maid_03.png" alt="Card image cap">
-                                            <div class="card-body">
+                                            <div class="card-body front_card">
                                                 <h4 class="card-title text_font">Nuke Noviana</h4>
                                                 <p class="card-text text_font d-none d-sm-block">
                                                     Country : Indonesian
@@ -195,7 +195,7 @@
                                         </div>
                                         <div class="card col-5 col-md-5 maid_bio_card animated">
                                             <img class="card-img-top rounded img-fluid" src="images/sample_maid_05.png" alt="Card image cap">
-                                            <div class="card-body">
+                                            <div class="card-body front_card">
                                                 <h4 class="card-title text_font">Nuke Noviana</h4>
                                                 <p class="card-text text_font d-none d-sm-block">
                                                     Country : Indonesian
@@ -207,7 +207,7 @@
                                         </div>
                                         <div class="card col-5 col-md-5 maid_bio_card animated">
                                             <img class="card-img-top rounded img-fluid" src="images/sample_maid_10.png" alt="Card image cap">
-                                            <div class="card-body">
+                                            <div class="card-body front_card">
                                                 <h4 class="card-title text_font">Nuke Noviana</h4>
                                                 <p class="card-text text_font d-none d-sm-block">
                                                     Country : Indonesian
@@ -219,7 +219,7 @@
                                         </div>
                                         <div class="card col-5 col-md-5 maid_bio_card animated">
                                             <img class="card-img-top rounded img-fluid" src="images/sample_maid_03.png" alt="Card image cap">
-                                            <div class="card-body">
+                                            <div class="card-body front_card ">
                                                 <h4 class="card-title text_font">Nuke Noviana</h4>
                                                 <p class="card-text text_font d-none d-sm-block">
                                                     Country : Indonesian
