--- a/search.html
+++ b/search.html
@@ -288,7 +288,7 @@
                                     <p class="card-text"><span class="maid_bio_key">Type</span> <span class="maid_bio_value">: N/A</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Salary</span> <span class="maid_bio_value">: $450.00</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Day Off</span> <span class="maid_bio_value">: 0</span></p>
-                                    <a href="#" class="btn btn-primary btn-block">View Detail</a>
+                                    <a href="maid_detail.html" class="btn btn-primary btn-block">View Detail</a>
                                 </div>
                             </div>
                             <!--maid_bio cardend -->
@@ -303,7 +303,7 @@
                                     <p class="card-text"><span class="maid_bio_key">Type</span> <span class="maid_bio_value">: N/A</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Salary</span> <span class="maid_bio_value">: $450.00</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Day Off</span> <span class="maid_bio_value">: 0</span></p>
-                                    <a href="#" class="btn btn-primary btn-block">View Detail</a>
+                                    <a href="maid_detail.html" class="btn btn-primary btn-block">View Detail</a>
                                 </div>
                             </div>
                             <!--maid_bio cardend -->
@@ -318,7 +318,7 @@
                                     <p class="card-text"><span class="maid_bio_key">Type</span> <span class="maid_bio_value">: N/A</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Salary</span> <span class="maid_bio_value">: $450.00</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Day Off</span> <span class="maid_bio_value">: 0</span></p>
-                                    <a href="#" class="btn btn-primary btn-block">View Detail</a>
+                                    <a href="maid_detail.html" class="btn btn-primary btn-block">View Detail</a>
                                 </div>
                             </div>
                             <!--maid_bio cardend -->
@@ -333,7 +333,7 @@
                                     <p class="card-text"><span class="maid_bio_key">Type</span> <span class="maid_bio_value">: N/A</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Salary</span> <span class="maid_bio_value">: $450.00</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Day Off</span> <span class="maid_bio_value">: 0</span></p>
-                                    <a href="#" class="btn btn-primary btn-block">View Detail</a>
+                                    <a href="maid_detail.html" class="btn btn-primary btn-block">View Detail</a>
                                 </div>
                             </div>
                             <!--maid_bio cardend -->
@@ -348,7 +348,7 @@
                                     <p class="card-text"><span class="maid_bio_key">Type</span> <span class="maid_bio_value">: N/A</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Salary</span> <span class="maid_bio_value">: $450.00</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Day Off</span> <span class="maid_bio_value">: 0</span></p>
-                                    <a href="#" class="btn btn-primary btn-block">View Detail</a>
+                                    <a href="maid_detail.html" class="btn btn-primary btn-block">View Detail</a>
                                 </div>
                             </div>
                             <!--maid_bio cardend -->
@@ -363,7 +363,7 @@
                                     <p class="card-text"><span class="maid_bio_key">Type</span> <span class="maid_bio_value">: N/A</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Salary</span> <span class="maid_bio_value">: $450.00</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Day Off</span> <span class="maid_bio_value">: 0</span></p>
-                                    <a href="#" class="btn btn-primary btn-block">View Detail</a>
+                                    <a href="maid_detail.html" class="btn btn-primary btn-block">View Detail</a>
                                 </div>
                             </div>
                             <!--maid_bio cardend -->
@@ -378,7 +378,7 @@
                                     <p class="card-text"><span class="maid_bio_key">Type</span> <span class="maid_bio_value">: N/A</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Salary</span> <span class="maid_bio_value">: $450.00</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Day Off</span> <span class="maid_bio_value">: 0</span></p>
-                                    <a href="#" class="btn btn-primary btn-block">View Detail</a>
+                                    <a href="maid_detail.html" class="btn btn-primary btn-block">View Detail</a>
                                 </div>
                             </div>
                             <!--maid_bio cardend -->
@@ -393,7 +393,7 @@
                                     <p class="card-text"><span class="maid_bio_key">Type</span> <span class="maid_bio_value">: N/A</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Salary</span> <span class="maid_bio_value">: $450.00</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Day Off</span> <span class="maid_bio_value">: 0</span></p>
-                                    <a href="#" class="btn btn-primary btn-block">View Detail</a>
+                                    <a href="maid_detail.html" class="btn btn-primary btn-block">View Detail</a>
                                 </div>
                             </div>
                             <!--maid_bio cardend -->
@@ -408,7 +408,7 @@
                                     <p class="card-text"><span class="maid_bio_key">Type</span> <span class="maid_bio_value">: N/A</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Salary</span> <span class="maid_bio_value">: $450.00</span></p>
                                     <p class="card-text"><span class="maid_bio_key">Day Off</span> <span class="maid_bio_value">: 0</span></p>
-                                    <a href="#" class="btn btn-primary btn-block">View Detail</a>
+                                    <a href="maid_detail.html" class="btn btn-primary btn-block">View Detail</a>
                                 </div>
                             </div>
                             <!--maid_bio cardend -->
@@ -418,7 +418,7 @@
                             <nav aria-label="Page navigation example">
                                 <ul class="pagination justify-content-end">
                                     <li class="page-item disabled">
-                                        <a class="page-link" href="#" tabindex="-1">Previous</a>
+                                        <a class="page-link" href="maid_detail.html" tabindex="-1">Previous</a>
                                     </li>
                                     <li class="page-item"><a class="page-link" href="#">1</a></li>
                                     <li class="page-item"><a class="page-link" href="#">2</a></li>
